[gd_scene load_steps=2 format=3 uid="uid://cksonu0m714vg"]

[ext_resource type="Script" path="res://src/game_over/postgame_stat_line.gd" id="1_io3k3"]

[node name="PostgameStatLine" type="HBoxContainer"]
script = ExtResource("1_io3k3")

[node name="StatName" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "StatisticName"

[node name="Ellipsis" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "......................................................."
clip_text = true
text_overrun_behavior = 1

[node name="StatValue" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
text = "30
"
